samples/_failures_safe/1761694247_d5328c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e23d3d79.c: In function ‘main’:
./samples/SAFE/__tmp_e23d3d79.c:151:12: error: missing terminating " character
  151 |     printf("\nMatrix Addition:\n
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e23d3d79.c:151:5: error: expected expression at end of input
  151 |     printf("\nMatrix Addition:\n
      |     ^~~~~~
./samples/SAFE/__tmp_e23d3d79.c:151:5: error: expected declaration or statement at end of input
